--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ body, p {
 	font: 400 0.875rem/1.375rem "Open Sans", sans-serif;
 }
 
+
+
 .p-large {
 	color: #f1f1f8;
 	font: 400 1rem/1.5rem "Open Sans", sans-serif;
@@ -994,7 +996,6 @@ input[type='checkbox'] {
 .basic-1 {
 	padding-top: 6.375rem;
 	padding-bottom: 6.875rem;
-	background: url('../images/video-background.jpg') center center no-repeat;
 	background-size: cover; 
 }
 
@@ -2086,5 +2087,13 @@ a:hover.back-to-top {
 		margin-left: 1.75rem;
 	}
 	/* end of extra pages */
+}
+
+.red{
+	color: red !important;
+}
+
+.red:hover {
+	color: #00c9db !important;
 }
 /* end of min-width width 1200px */
